Fixing homepage masthead text alignment for mobile

--- a/less/style.less
+++ b/less/style.less
@@ -5642,4 +5642,8 @@ input.cmn-toggle-round-flat:checked + label:after {
 
 .caption-display {
   display: table-cell;
+  position: relative;
+  top: inherit !important;
+  vertical-align: middle;
+  padding-top: 1.75em;
 }
